@@ -854,6 +854,10 @@ operator|=
 operator|-
 literal|1
 expr_stmt|;
+assert|assert
+name|assertSaneFileNames
+argument_list|()
+assert|;
 block|}
 DECL|method|addFiles
 specifier|public
@@ -874,6 +878,15 @@ argument_list|(
 name|files
 argument_list|)
 expr_stmt|;
+name|sizeInBytes
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+assert|assert
+name|assertSaneFileNames
+argument_list|()
+assert|;
 block|}
 DECL|method|addFile
 specifier|public
@@ -891,6 +904,47 @@ argument_list|(
 name|file
 argument_list|)
 expr_stmt|;
+name|sizeInBytes
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+assert|assert
+name|assertSaneFileNames
+argument_list|()
+assert|;
+block|}
+comment|// used only by assert
+DECL|method|assertSaneFileNames
+specifier|private
+name|boolean
+name|assertSaneFileNames
+parameter_list|()
+block|{
+for|for
+control|(
+name|String
+name|file
+range|:
+name|setFiles
+control|)
+block|{
+assert|assert
+name|file
+operator|.
+name|startsWith
+argument_list|(
+literal|"_"
+argument_list|)
+operator|:
+literal|"invalid codec filename: "
+operator|+
+name|file
+assert|;
+block|}
+return|return
+literal|true
+return|;
 block|}
 comment|/**    * Get a codec attribute value, or null if it does not exist    */
 DECL|method|getAttribute
