@@ -382,6 +382,20 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|IndexOutput
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|Lock
 import|;
 end_import
@@ -12090,6 +12104,97 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+comment|//LUCENE-1468 -- make sure opening an IndexWriter with
+comment|// create=true does not remove non-index files
+DECL|method|testOtherFiles
+specifier|public
+name|void
+name|testOtherFiles
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+comment|// Create my own random file:
+name|IndexOutput
+name|out
+init|=
+name|dir
+operator|.
+name|createOutput
+argument_list|(
+literal|"myrandomfile"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|writeByte
+argument_list|(
+operator|(
+name|byte
+operator|)
+literal|42
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|dir
+operator|.
+name|fileExists
+argument_list|(
+literal|"myrandomfile"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
